--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
-  border: 4px solid rgb(255, 255, 255);
+  border: 4px inset rgb(241, 242, 246);
 }
 
 .section__pic-container img {
