--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,6 +2,8 @@
     #profile {
       height: 83vh;
       margin-bottom: 6rem;
+      margin-left: 3.3rem;
+      
       
     }
     .about-containers {
